# flightrecorder

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  STATUS.md
crates/design/: Cargo.toml
crates/design/dev/: 0001-macos-launchctl.md  0002-ai-diagnostic-data-export-guide.md
crates/design/docs/: README.md
crates/design/docs/05-active/: 0001-flightrecorder-project-plan.md
crates/design/src/: lib.rs
crates/flightrecorder/: Cargo.toml
crates/flightrecorder-linux/: Cargo.toml
crates/flightrecorder-linux/src/: lib.rs
crates/flightrecorder-mac/: Cargo.toml
crates/flightrecorder-mac/src/: accessibility.rs  clipboard.rs  lib.rs  monitor.rs  permissions.rs
crates/flightrecorder/src/: capture.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  monitor.rs
crates/flightrecorder/src/cli/: commands.rs  mod.rs
crates/flightrecorder/src/privacy/: filter.rs  mod.rs  patterns.rs
crates/flightrecorder/src/storage/: migrations.rs  mod.rs  schema.rs
workbench/: TODO.md
