[workspace]
resolver = "2"
members = [
    "crates/design",
    "crates/flightrecorder",
    "crates/flightrecorder-linux",
    "crates/flightrecorder-mac",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["Duncan McGreggor <oubiwan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Cross-platform system recorder"
repository = "https://github.com/oxur/flightrecorder"
readme = "README.md"
keywords = ["recorder", "system", "cross-platform"]
categories = ["development-tools"]

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for privacy patterns
regex = "1.10"

# Hashing for deduplication
blake3 = "1.5"

# Clipboard access
clipboard-rs = "0.2"

# macOS accessibility
macos-accessibility-client = "0.0.1"

# System directories
dirs = "5.0"

# Design docs (dev only)
oxur-odm = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow multiple versions of transitive dependencies (we can't control this)
multiple_crate_versions = "allow"
