[package]
name = "flightrecorder-design"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Design documentation and architectural decision records for FlightRecorder"
readme = "docs/README.md"
keywords = ["documentation", "design"]
categories = ["development-tools"]

[dependencies]
# No dependencies - this is a documentation-only crate

[dev-dependencies]
oxur-odm = { workspace = true }
