[package]
name = "flightrecorder-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "macOS-specific implementation for flightrecorder"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "flightrecorder_mac"
path = "src/lib.rs"

[dependencies]
# Clipboard monitoring
clipboard-rs.workspace = true

# Async runtime
tokio.workspace = true

# Time handling
chrono.workspace = true

# Logging
tracing.workspace = true

# Hashing for change detection
blake3.workspace = true

# Error handling
thiserror.workspace = true

[lints]
workspace = true
