[package]
name = "flightrecorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "fliterec"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# Async runtime
tokio.workspace = true

# Storage
rusqlite.workspace = true

# Configuration
figment.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async traits
async-trait.workspace = true

# Time
chrono.workspace = true

# Regex for privacy patterns
regex.workspace = true

# Hashing for deduplication
blake3.workspace = true

# System directories
dirs.workspace = true

# Platform-specific dependencies are automatically included based on target OS
[target.'cfg(target_os = "linux")'.dependencies]
flightrecorder-linux = { version = "0.1.0", path = "../flightrecorder-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
flightrecorder-mac = { version = "0.1.0", path = "../flightrecorder-mac" }

[features]
default = []

[lints]
workspace = true
